crates/aura-macros/tests/boundaries/semantic_owner_missing_context.stderr
error: semantic_owner requires a parameter typed as OperationContext or containing OperationContext
  --> tests/boundaries/semantic_owner_missing_context.rs:5:1
   |
 5 | / #[aura_macros::semantic_owner(
 6 | |     owner = "demo-owner",
 7 | |     wrapper = "missing_context_wrapper",
 8 | |     terminal = "publish_done",
...  |
14 | |     category = "move_owned"
15 | | )]
   | |__^
   |
   = note: this error originates in the attribute macro `aura_macros::semantic_owner` (in Nightly builds, run with -Z macro-backtrace for more info)
